# bevy-gp

./: .envrc  .gitignore  Cargo.toml  bevy-gp-a457d823e6493773.js  bevy-gp-cc81b5ce6313140f.js  flake.nix  index.html  toolchain.toml
.cargo/: config
.github/workflows/: pages.yaml
src/: main.rs  main.rs.old
