[package]
name = "bevy-gp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z'
lto = "fat"
panic = 'abort'
codegen-units = 1

[dependencies]
console_error_panic_hook = "0.1.7"
# vec3 = "0.2.1"
wasm-bindgen = "=0.2.84"
wee_alloc = "0.4.5"

[dependencies.bevy]
version = "0.9.1"
default-features = false
# features = [
#     "bevy_sprite",
#     "bevy_render",
#     "bevy_asset",
#     "bevy_scene"
# ]
features = [
    "animation",
    "bevy_asset",
    # "bevy_audio",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "render",
    "png",
    # "hdr",
    # "vorbis",
    # "x11",
    # "filesystem_watcher",
]
