[package]
name = "bevy-gp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 'z'
lto = "fat"
panic = 'abort'
codegen-units = 1

[dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "=0.2.84"
web-sys = "0.3.61"
bevy_particle_systems = "0.8.0"
bevy_asset = "0.9.1"
bevy_web_asset = "0.5.0"
bevy-web-resizer = "4.0.1"

[dependencies.bevy]
version = "0.9.1"
default-features = false
# features = [
#     "bevy_sprite",
#     "bevy_render",
#     "bevy_asset",
#     "bevy_scene"
# ]
features = [
    "animation",
    "bevy_asset",
    # "bevy_audio",
    "bevy_gilrs",
    "bevy_scene",
    "bevy_winit",
    "render",
    "png",
    # "hdr",
    # "vorbis",
    # "x11",
    # "filesystem_watcher",
    "wayland",
]
